<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- calculate_time -->
    <string name="tv_calculate_time_now">지금</string>
    <string name="tv_calculate_time_minute">분 전</string>
    <string name="tv_calculate_time_hour">시간 전</string>
    <string name="tv_calculate_time_day">일 전</string>
    <string name="tv_calculate_time_week">주 전</string>
    <string name="tv_calculate_time_month">달 전</string>
    <string name="tv_calculate_time_year">년 전</string>

    <!-- dialog -->
    <string name="label_dialog_report_title">신고하기</string>
    <string name="label_dialog_report_yes">신고하기</string>
    <string name="label_dialog_delete_feed_title">게시글을 삭제하시겠어요?</string>
    <string name="label_dialog_delete_feed_description">게시글이 영구히 삭제됩니다.</string>
    <string name="label_dialog_delete_comment_title">댓글을 삭제하시겠어요?</string>
    <string name="label_dialog_delete_comment_description">댓글이 영구히 삭제됩니다.</string>
    <string name="label_dialog_delete_yes">삭제하기</string>
    <string name="label_dialog_delete_account_title">계정을 삭제하시겠어요?</string>
    <string name="label_dialog_logout_title">로그아웃하시겠어요?</string>
    <string name="label_dialog_logout_yes">로그아웃하기</string>
    <string name="label_dialog_transparency_title">와블의 온화함을 해치는\n누군가를 발견하신건가요?</string>
    <string name="label_dialog_transparency_yes">투명도 내리기</string>
    <string name="label_dialog_transparency_no">고민할게요</string>
    <string name="label_dialog_cancel_posting_title">작성중인 글에서 나가실건가요?\n작성하셨던 내용은 삭제돼요</string>
    <string name="label_dialog_cancel_posting__yes">나가기</string>
    <string name="label_dialog_share_no">취소</string>
    <string name="label_dialog_blank" />
    <string name="label_dialog_ban_title">밴하시겠어요?</string>
    <string name="label_dialog_ban_description">1회 누적 - 해당 글(게시글 or 댓글 or 답글)만 블라인드 처리\n2회 누적 - 해당 사용자 글 전체 블라인드 처리</string>
    <string name="label_dialog_ban_yes">밴하기</string>
    <string name="hint_dialog_transparency_reason">투명도를 내리려는 이유가 무엇인가요?\nex. 선수를 비하했어요</string>
    <string name="hint_dialog_report_reason">신고하시려는 사유를 알려주시면 더 건강한 문화를 만드는 것에 도움돼요.\n사유는 생략 가능해요.</string>

    <!-- feed -->
    <string name="content_description_feed_image">피드 이미지입니다.</string>
    <string name="label_feed_ghost_level">투명도 %s%%</string>
    <string name="label_feed_upload_time">· %s</string>
    <string name="label_feed_blind">블라인드 처리된 게시글이에요.</string>

    <!-- comment -->
    <string name="label_comment_write_child_comment">답글쓰기</string>
    <string name="label_comment_blind">블라인드 처리된 내용이에요.</string>

    <!-- snack bar -->
    <string name="label_snack_bar_comment_ing">댓글 남기는 중</string>
    <string name="label_snack_bar_comment_complete">댓글을 남겼어요</string>
    <string name="label_snack_bar_child_comment_ing">답글 남기는 중</string>
    <string name="label_snack_bar_child_comment_complete">답글을 남겼어요</string>
    <string name="label_snack_bar_ghost">덕분에 와블이 더 온화해지고 있어요!</string>
    <string name="label_snack_bar_report">신고 접수가 완료되었어요.\n24시간 내에 조치할 예정이에요.</string>
    <string name="label_snack_bar_ban">밴 ! 완 ! 료 !</string>
    <string name="label_snack_bar_link_error">잘못된 링크입니다.</string>
    <string name="label_snack_bar_view_it_ing">뷰잇 남기는 중</string>
    <string name="label_snack_bar_view_it_complete">뷰잇을 남겼어요</string>
    <string name="label_snack_bar_image_download_ing">이미지 다운로드 하는 중</string>
    <string name="label_snack_bar_image_download_complete">이미지 다운로드가 완료됬어요</string>

    <!-- ghost -->
    <string name="label_ghost_comment_type">commentGhost</string>
    <string name="label_ghost_content_type">contentGhost</string>
    <string name="label_ghost_complete">투명도 적용 완료</string>

    <!-- content description -->
    <string name="content_description_loading_spinner">로딩 스피너입니다.</string>

    <!-- app bar -->
    <string name="label_app_bar_news">소식</string>
    <string name="label_app_bar_view_it">뷰잇</string>
    <string name="label_app_bar_community">커뮤니티</string>
    <string name="label_app_bar_quiz">퀴즈</string>

    <!-- ban trigger type -->
    <string name="label_ban_trigger_type_content">content</string>
    <string name="label_ban_trigger_type_comment">comment</string>
    <string name="label_ban_trigger_type_viewit">Viewit</string>
</resources>
