<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="18dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="54dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_child_comment_profile_img"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:padding="@dimen/padding_touch_30"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/WableCircleImage"
        tools:src="@color/gray_700" />

    <TextView
        android:id="@+id/tv_child_comment_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:maxLength="10"
        android:textAppearance="@style/TextAppearance.Wable.Body3"
        app:layout_constraintBottom_toTopOf="@id/tv_child_comment_ghost_level"
        app:layout_constraintStart_toEndOf="@id/iv_child_comment_profile_img"
        app:layout_constraintTop_toTopOf="@id/iv_child_comment_profile_img"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/dummy" />

    <TextView
        android:id="@+id/tv_child_comment_ghost_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:textAppearance="@style/TextAppearance.Wable.Caption4"
        android:textColor="@color/gray_700"
        app:layout_constraintBottom_toBottomOf="@id/iv_child_comment_profile_img"
        app:layout_constraintStart_toStartOf="@id/tv_child_comment_nickname"
        app:layout_constraintTop_toBottomOf="@id/tv_child_comment_nickname"
        tools:text="@string/label_feed_ghost_level" />

    <TextView
        android:id="@+id/tv_child_comment_upload_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/label_feed_upload_time"
        android:textAppearance="@style/TextAppearance.Wable.Caption4"
        android:textColor="@color/gray_500"
        app:layout_constraintBottom_toBottomOf="@id/tv_child_comment_ghost_level"
        app:layout_constraintStart_toEndOf="@id/tv_child_comment_ghost_level"
        app:layout_constraintTop_toTopOf="@id/tv_child_comment_ghost_level" />

    <TextView
        android:id="@+id/tv_child_comment_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.Wable.Body4"
        android:textColor="@color/gray_800"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_child_comment_blind"
        tools:text="@string/dummy" />

    <View
        android:id="@+id/view_child_comment_transparent_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:backgroundTint="#0FFCFCFD" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_child_comment_more"
        style="@style/Wable.Icon.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_home_more"
        app:iconSize="32dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_child_comment_ghost"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/sel_comment_ghost"
        android:enabled="true"
        android:minHeight="0dp"
        app:backgroundTint="@null"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/tv_child_comment_content"
        app:rippleColor="@color/white" />

    <Space
        android:id="@+id/spacer_child_comment"
        android:layout_width="16dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@id/btn_child_comment_ghost"
        app:layout_constraintTop_toTopOf="@id/btn_child_comment_ghost" />

    <TextView
        android:id="@+id/tv_child_comment_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textAppearance="@style/TextAppearance.Wable.Caption1"
        android:textColor="@color/gray_600"
        app:layout_constraintBottom_toBottomOf="@id/btn_child_comment_like"
        app:layout_constraintStart_toEndOf="@id/btn_child_comment_like"
        app:layout_constraintTop_toTopOf="@id/btn_child_comment_like"
        tools:text="00" />

    <CheckBox
        android:id="@+id/btn_child_comment_like"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/sel_feed_heart"
        android:backgroundTint="@color/sel_share_comment_like_color"
        android:button="@null"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_child_comment_content" />

    <TextView
        android:id="@+id/tv_child_comment_blind"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_white_fill_8_rect"
        android:backgroundTint="@color/gray_100"
        android:gravity="center"
        android:text="@string/label_comment_blind"
        android:textAppearance="@style/TextAppearance.Wable.Body3"
        android:textColor="@color/gray_500"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="290:50"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/tv_child_comment_ghost_level"
        app:layout_constraintTop_toBottomOf="@id/tv_child_comment_ghost_level" />
</androidx.constraintlayout.widget.ConstraintLayout>
